# mandelbrot

./: CMakeLists.txt  vcpkg.json
benchmarks/: CMakeLists.txt  mandelbrot_benchmark.cpp
cmake/: CMakeLists.txt  CompilerOptions.cmake
cmake/pngpp/: CMakeLists.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/cli/: CMakeLists.txt  Write.cpp  Write.hpp  main.cpp
src/apps/desktop-gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  ParameterWidget.cpp  ParameterWidget.hpp  main.cpp
src/mandelbrot-core/: CMakeLists.txt
src/mandelbrot-core/include/: Mandelbrot.hpp  PixelBuffer.hpp  Rectangle.hpp  Size.hpp
src/mandelbrot-core/src/: Mandelbrot.cpp  MandelbrotImpl.cpp  MandelbrotImpl.hpp
tests/: CMakeLists.txt  mandelbrot_test.cpp
